# routes/api.php
@@ -20,6 +20,7 @@ Route::middleware('auth:sanctum')
         return $request->user();
     });
 
+Route::post('/register', [AuthController::class, 'register']);
 Route::post('/login', [AuthController::class, 'login']);
 Route::post('/logout', [AuthController::class, 'logout'])
     ->middleware('auth:sanctum');
